k8s/engagement-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engagement-service
  namespace: darviq-buzz
spec:
  selector:
    app: engagement-service
  ports:
    - port: 5004
      targetPort: 5004
