k8s/feed-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feed-service
  namespace: darviq-buzz
spec:
  selector:
    app: feed-service
  ports:
    - port: 5007
      targetPort: 5007
