k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: darviq-buzz
spec:
  selector:
    app: gateway
  ports:
    - port: 5000
      targetPort: 5000
