k8s/media-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-service
  namespace: darviq-buzz
spec:
  selector:
    app: media-service
  ports:
    - port: 5009
      targetPort: 5009
