k8s/messaging-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
  namespace: darviq-buzz
spec:
  selector:
    app: messaging-service
  ports:
    - port: 5006
      targetPort: 5006
