k8s/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: darviq-buzz
spec:
  selector:
    app: notification-service
  ports:
    - port: 5008
      targetPort: 5008
