k8s/post-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
  namespace: darviq-buzz
spec:
  selector:
    app: post-service
  ports:
    - port: 5003
      targetPort: 5003
