k8s/social-graph-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-graph-service
  namespace: darviq-buzz
spec:
  selector:
    app: social-graph-service
  ports:
    - port: 5002
      targetPort: 5002
