k8s/story-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: story-service
  namespace: darviq-buzz
spec:
  selector:
    app: story-service
  ports:
    - port: 5005
      targetPort: 5005
