k8s/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: darviq-buzz
spec:
  selector:
    app: user-service
  ports:
    - port: 5001
      targetPort: 5001
