k8s/web-bff-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-bff
  namespace: darviq-buzz
spec:
  selector:
    app: web-bff
  ports:
    - port: 5010
      targetPort: 5010
